fix: centered alignment of spans and corrected query error

--- a/css/style.css
+++ b/css/style.css
@@ -275,3 +275,7 @@ section {
 input[type="radio"]:checked ~ label i {
   color: gold;
 }
+
+span {
+  text-align: center;
+}
